* Split updateTabBar() into two separate methods 	- updateTabBarVisibility(): used to react only on "alwaysShowTabBar" settings 	- updateAddTabButton(): used to react only on tabbar changes

* Improve handling of the add tab button. updateAddTabButton() is now called on any
  tab layout changed instead of being called in any function which manipulate tabs.

* Use a tab height computed with KTabBar instead of the add tab button height with a magical number.
  It fixes some issues with the Bespin theme.

BUG: 304325